feat: 定义分类页面结构.

--- a/mall/src/pages/Home/style.scss
+++ b/mall/src/pages/Home/style.scss
@@ -13,7 +13,7 @@
 }
 
 .header {
-  height: 44px;
+  height: 11.5vw;
   line-height: 44px;
   background: #eee;
   display: flex;
@@ -68,7 +68,7 @@
   position: fixed;
   left: 0;
   right: 0;
-  top: 44px;
+  top: 11.5vw;
   bottom: 13.5vw;
   .content-scroll {
     height: 100%;
