feat: 做分类列表缓存封装.

--- a/mall/src/pages/Home/style.scss
+++ b/mall/src/pages/Home/style.scss
@@ -14,7 +14,7 @@
 
 .header {
   height: 11.5vw;
-  line-height: 44px;
+  line-height: 11.5vw;
   background: #eee;
   display: flex;
   // position: relative;
