--- a/mall/src/pages/Category/style.scss
+++ b/mall/src/pages/Category/style.scss
@@ -34,6 +34,25 @@
     }
     .right {
       flex: 1;
+      display: flex;
+      flex-direction: column;
+      .scroll-wrapper {
+        position: relative;
+        overflow: hidden;
+        flex: 1;
+        .content-scroll {
+          position: absolute;
+          left: 0;
+          right: 0;
+          top: 0;
+          bottom: 0;
+        }
+        .no-data {
+          margin-top: 30px;
+          color: #bbb;
+          text-align: center;
+        }
+      }
     }
   }
 }
