--- a/mall/src/pages/Home/Search/style.scss
+++ b/mall/src/pages/Home/Search/style.scss
@@ -20,3 +20,13 @@
 	animation: bounceFromCenterToRight .4s forwards;
 	box-shadow: -3px 0  5px rgba(0, 0, 0, .1);
 }
+
+#search-result {
+  position: fixed;
+  top: 11.5vw;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 200;
+  background: #fff;
+}
