--- a/mall/src/pages/Home/Search/style.scss
+++ b/mall/src/pages/Home/Search/style.scss
@@ -56,6 +56,12 @@
 				margin-right: 8px;
 				margin-bottom: 8px;
 			}
+			.more {
+				margin-top: 10px;
+				text-align: center;
+				font-size: 14px;
+				color: #999;
+			}
 		}
 	}
 	.empty-search-history {
