feat: 完善搜索功能.

--- a/mall/src/components/GoodsList/style.scss
+++ b/mall/src/components/GoodsList/style.scss
@@ -41,4 +41,11 @@ ul {
       }
     }
   }
+  .load-more {
+    text-align: center;
+    height: 20vw;
+    line-height: 20vw;
+    font-size: 14px;
+    color: #999;
+  }
 }
