feat: 城市板块结构布局.

--- a/mall/src/pages/City/style.scss
+++ b/mall/src/pages/City/style.scss
@@ -27,6 +27,12 @@
           padding-left: 2.5vw;
           background: #F2F2F2;
         }
+        .city-list {
+          padding: 5px 30px 5px 5px;
+          display: flex;
+          flex: wrap;
+          box-sizing: border-box;
+        }
       }
     }
   }
