fix: 修复城市组件已知 bug。

--- a/mall/src/pages/City/style.scss
+++ b/mall/src/pages/City/style.scss
@@ -93,7 +93,9 @@
       .null-search {
         text-align: center;
         margin-top: 50px;
-        font-size: 14px;
+        // font-size: 14px;
+        letter-spacing: 2px;
+        color: #999;
       }
     }
     .fixed-top {
