feat: 编写登录 / 注册组件模板.

--- a/mall/src/components/GoodsList/style.scss
+++ b/mall/src/components/GoodsList/style.scss
@@ -46,7 +46,7 @@ ul {
       .delete-icon {
         margin: auto;
         font-size: 1.3rem;
-        color: red;
+        color: #f00808;
       }
     }
   }
