feat: 完成用户注册功能.

--- a/mall/src/pages/Login/style.scss
+++ b/mall/src/pages/Login/style.scss
@@ -66,6 +66,9 @@ $color: #b532e9;
         font-size: 1.1rem;
         letter-spacing: .1rem;
       }
+      .pic-code {
+        flex-basis: 30%;
+      }
       &::before {
         position: absolute;
         left: 0;
