fix: 修复注册相关 bug.

--- a/mall/src/pages/User/style.scss
+++ b/mall/src/pages/User/style.scss
@@ -68,6 +68,7 @@ $color: #b532e9;
   }
   .other-entry {
     margin-top: 2rem;
+    margin-bottom: 13.5vw;
     div {
       display: flex;
       align-items: center;
