--- a/mall/src/pages/Category/style.scss
+++ b/mall/src/pages/Category/style.scss
@@ -34,12 +34,13 @@
     }
     .right {
       flex: 1;
+      width: 0; // width为 0 可以保证元素宽度平分父元素宽度
       display: flex;
       flex-direction: column;
       .scroll-wrapper {
         position: relative;
-        overflow: hidden;
         flex: 1;
+        overflow: hidden;
         .content-scroll {
           position: absolute;
           left: 0;
