--- a/mall/src/pages/Cart/style.scss
+++ b/mall/src/pages/Cart/style.scss
@@ -1,5 +1,59 @@
 $color:#b532e9;
 
+// 计步器样式
+@mixin stepper-style {
+  i {
+    position: relative;
+    display: inline-block;
+    box-sizing: border-box;
+    width: 1.3rem;
+    height: 1.3rem;
+    border-radius: 50%;
+  }
+  .minus {
+    border: 2px solid $color;
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 60%;
+      height: 1px;
+      // height: .1rem;
+      background: $color;
+    }
+  }
+  .plus {
+    background: $color;
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 60%;
+      height: 1px;
+      // height: .1rem;
+      background: #fff;
+    }
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      height: 60%;
+      width: 1px;
+      // width: .1rem;
+      background: #fff;
+    }
+  }
+}
+
 .shop-cart {
   .shop-cart-container {
     position: fixed;
@@ -47,19 +101,90 @@ $color:#b532e9;
       top: 0;
       left: 0;
       right: 0;
-      bottom: 0;
+      bottom: 12vw;
+      overflow: hidden;
       .container {
         .header {
           display: flex;
           justify-content: space-between;
-          font-size: 1.2rem;
+          font-size: 4.5vw;
           padding: .5rem 1rem;
-          border-bottom: 1px solid #E4E7ED;
           .mark { 
-            color: $color;
-            padding: 0 .5rem;
+            color: red;
+            padding: 0 .3rem;
           }
         }
+        .goods-list {
+          .goods-item {
+            display: flex;
+            box-sizing: border-box;
+            padding: .5rem;
+            border-bottom: 1px solid #eee;
+            .goods-left {
+              flex-basis: 30%;
+              img {
+                width: 100%;
+                height: 100%;
+                box-shadow: 0 0.533vw 2.133vw #f0f1f2;
+              }
+            }
+            .goods-right {
+              flex: 1;
+              display: flex;
+              flex-direction: column;
+              justify-content: space-around;
+              padding-left: 5vw;
+              .goods-name {
+                letter-spacing: 0.01rem;
+                line-height: 1.2;
+              }
+              .wrapper {
+                display: flex;
+                justify-content: space-between;
+                padding-right: 5vw;
+                vertical-align: middle;
+                .goods-price {
+                  color: $color; 
+                  font-weight: 700;
+                }
+                .stepper {
+                  display: flex;
+                  align-items: center;
+                  @include stepper-style;
+                  span {
+                    padding: 0 .8rem;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    .calc-total-wrapper {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      height: 12vw;
+      display: flex;
+      align-items: center;
+      font-size: 4.5vw;
+      padding: 0 1rem;
+      .calc-price {
+        flex: 1;
+        line-height: 12vw;
+        .total-price {
+          color: red;
+        }
+      }
+      .calc-btn {
+        flex-basis: 25%;
+        line-height: 10vw;
+        border-radius: 2rem;
+        text-align: center;
+        color: #fff;
+        background: $color;
       }
     }
   }
