feat: 完成订单支付页基本结构 & 优化部分 code.

--- a/mall/src/components/GoodsList/style.scss
+++ b/mall/src/components/GoodsList/style.scss
@@ -29,16 +29,22 @@ ul {
         text-overflow: ellipsis; 
       }
       .goods-num {
-        .pic {
+        .price {
           color: $color;
           font-weight: 700;
           margin-right: .5rem;
         }
-        .orl-pic {
+        .orl-price {
           text-decoration: line-through;
           font-size: 13px;
         }
       }
+    }
+    .order-goods-count {
+      flex-basis: 10%;
+      display: flex;
+      align-items: center;
+      color: $color;
     }
     .delete-btn {
       flex-basis: 10%;
