--- a/mall/src/pages/User/style.scss
+++ b/mall/src/pages/User/style.scss
@@ -74,7 +74,7 @@ $color: #b532e9;
       align-items: center;
       padding: .8rem 1rem;
       border-bottom: 1px solid #eee;
-      .mark-icon { margin-right: .5rem; }
+      .small-icon { margin-right: .5rem; }
       .arrow-icon { margin-left: auto; }
       span { font-size: 3.5vw; }
     }
