--- a/mall/src/pages/OrderManage/style.scss
+++ b/mall/src/pages/OrderManage/style.scss
@@ -7,5 +7,43 @@ $color: #b532e9;
     left: 0;
     right: 0;
     bottom: 0;
+    display: flex;
+    flex-direction: column;
+    .content-scroll {
+      flex: 1;
+      .container {
+        .order-item {
+          margin: 2.5vw;
+          .order-wrapper {
+            padding: 4vw 2.5vw;
+            .order-number {
+              font-size: .9rem;
+              padding-bottom: 2.5vw;
+              border-bottom: .1rem solid #eee;;
+              .number { color: $color }
+            }
+            .goods-list {
+              .goods-item {
+                display: flex;
+                margin-top: 2.5vw;
+                .goods-img {
+                  flex-basis: 30%;
+                  box-shadow: 0 2px 8px #f0f1f2;
+                  img {
+                    width: 100%;
+                    height: 100%;
+                  }
+                }
+                .goods-name { 
+                  margin: 0 2.5vw;
+                  font-size: .9rem;
+                  line-height: 1.2;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
