--- a/mall/src/pages/OrderManage/style.scss
+++ b/mall/src/pages/OrderManage/style.scss
@@ -9,35 +9,73 @@ $color: #b532e9;
     bottom: 0;
     display: flex;
     flex-direction: column;
-    .content-scroll {
+    .content-container {
       flex: 1;
-      .container {
-        .order-item {
-          margin: 2.5vw;
-          .order-wrapper {
-            padding: 4vw 2.5vw;
-            .order-number {
-              font-size: .9rem;
-              padding-bottom: 2.5vw;
-              border-bottom: .1rem solid #eee;;
-              .number { color: $color }
-            }
-            .goods-list {
-              .goods-item {
-                display: flex;
-                margin-top: 2.5vw;
-                .goods-img {
-                  flex-basis: 30%;
-                  box-shadow: 0 2px 8px #f0f1f2;
-                  img {
-                    width: 100%;
-                    height: 100%;
+      position: relative;
+      .content-scroll {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        overflow: hidden;
+        background: #f2f2f2;
+        .container {
+          .order-item {
+            float: left;
+            background: #fff;
+            border-radius: .5rem;
+            margin: 4vw 2.5vw;
+            .order-wrapper {
+              padding: 2.5vw;
+              .order-number {
+                font-size: .9rem;
+                padding-bottom: 2.5vw;
+                border-bottom: .1rem solid #eee;
+                .number { color: $color }
+              }
+              .goods-list {
+                .goods-item {
+                  display: flex;
+                  margin-top: 2.5vw;
+                  .goods-img {
+                    flex-basis: 30%;
+                    box-shadow: 0 2px 8px #f0f1f2;
+                    img {
+                      width: 100%;
+                      height: 100%;
+                    }
+                  }
+                  .goods-name {
+                    flex: 1;
+                    margin: 0 2.5vw;
+                    font-size: .9rem;
+                    line-height: 1.2;
+                  }
+                  .goods-price {
+                    font-size: .9rem;
+                    flex-basis: 15%;
+                    text-align: center;
+                    .money { color: red }
+                    .buy-count {
+                      color: $color;
+                      margin-top: .8rem;
+                    }
                   }
                 }
-                .goods-name { 
-                  margin: 0 2.5vw;
-                  font-size: .9rem;
-                  line-height: 1.2;
+              }
+              .order-info {
+                margin-top: 2.5vw;
+                border-top: .1rem solid #eee;
+                font-size: .9rem;
+                text-align: right;
+                p {
+                  margin-top: 2.5vw;
+                  .goods-count {
+                    color: red;
+                    padding: 0 .3rem;
+                  }
+                  .create-time { color: $color }
                 }
               }
             }
