--- a/mall/src/pages/OrderManage/style.scss
+++ b/mall/src/pages/OrderManage/style.scss
@@ -22,12 +22,13 @@ $color: #b532e9;
         background: #f2f2f2;
         .container {
           .order-item {
-            float: left;
-            background: #fff;
-            border-radius: .5rem;
-            margin: 4vw 2.5vw;
+            // 垂直方向 margin 重叠解决方法: 触发 BFC
+            overflow: hidden;
             .order-wrapper {
+              margin: 4vw 2.5vw;
               padding: 2.5vw;
+              border-radius: .5rem;
+              background: #fff;
               .order-number {
                 font-size: .9rem;
                 padding-bottom: 2.5vw;
@@ -71,6 +72,9 @@ $color: #b532e9;
                 text-align: right;
                 p {
                   margin-top: 2.5vw;
+                  overflow: hidden;
+                  text-overflow: ellipsis;
+                  white-space: nowrap;
                   .goods-count {
                     color: red;
                     padding: 0 .3rem;
@@ -82,6 +86,12 @@ $color: #b532e9;
           }
         }
       }
+    }
+    .empty {
+      text-align: center;
+      margin-top: 100px;
+      letter-spacing: 2px;
+      color: #999 ;
     }
   }
 }
